[gd_scene load_steps=8 format=3 uid="uid://cs3xa8okkjed4"]

[ext_resource type="Script" uid="uid://b8gowgvjufwey" path="res://Global_Scenes/Debug/Keys_Editor/Scripts/Keys_Editor.gd" id="1"]
[ext_resource type="Theme" uid="uid://pr4yljlh62sp" path="res://Global_Resources/Themes/Debug/Debug.tres" id="2"]
[ext_resource type="PackedScene" uid="uid://de0xrbigi3qvr" path="res://Scenes/Custom_Containers/Entry_Toggler/Key_Entry_Toggler.tscn" id="3_o1rko"]
[ext_resource type="PackedScene" uid="uid://b2hso273s8kxl" path="res://Scenes/Sort_By/Sort_By.tscn" id="4_ohsf0"]
[ext_resource type="PackedScene" uid="uid://brwnr7v5wrvx" path="res://Scenes/Search/Search.tscn" id="4_y2ige"]
[ext_resource type="Texture2D" uid="uid://ds3xrue2a8h8y" path="res://Global_Resources/Sprites/UI/Save.png" id="5_a454i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sp2t4"]
content_margin_left = 36.0
bg_color = Color(0.145098, 0.172549, 0.231373, 1)

[node name="Keys_Editor" type="MarginContainer" groups=["Translated"]]
light_mask = 8
visibility_layer = 8
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1")

[node name="HBox" type="HBoxContainer" parent="."]
light_mask = 8
visibility_layer = 8
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBox" type="VBoxContainer" parent="HBox"]
light_mask = 8
visibility_layer = 8
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 24

[node name="Keys_Types" parent="HBox/VBox" instance=ExtResource("3_o1rko")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Options" type="HBoxContainer" parent="HBox/VBox"]
light_mask = 8
visibility_layer = 8
layout_mode = 2

[node name="Sort_By" parent="HBox/VBox/Options" instance=ExtResource("4_ohsf0")]
layout_mode = 2
_e_sort_args = {
"Created": "get_time_created",
"Key": "get_key"
}

[node name="Search" parent="HBox/VBox/Options" instance=ExtResource("4_y2ige")]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8

[node name="Input" parent="HBox/VBox/Options/Search" index="0"]
theme_override_styles/normal = SubResource("StyleBoxFlat_sp2t4")

[node name="Scroll" type="ScrollContainer" parent="HBox/VBox"]
light_mask = 8
visibility_layer = 8
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="Keys" type="HFlowContainer" parent="HBox/VBox/Scroll"]
light_mask = 8
visibility_layer = 8
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Add" type="LineEdit" parent="HBox/VBox"]
light_mask = 8
visibility_layer = 8
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "ADD"

[node name="Options" type="VBoxContainer" parent="HBox"]
light_mask = 8
visibility_layer = 8
layout_mode = 2

[node name="Save" type="Button" parent="HBox/Options"]
light_mask = 8
visibility_layer = 8
custom_minimum_size = Vector2(48, 32)
layout_mode = 2
icon = ExtResource("5_a454i")
icon_alignment = 1
expand_icon = true

[editable path="HBox/VBox/Options/Search"]
